# yelp-data-pipeline

./: .gitignore  pyproject.toml
yelpCrawler/: scrapy.cfg
yelpCrawler/yelpCrawler/: items.py  middlewares.py  pipelines.py  settings.py
yelpCrawler/yelpCrawler/spiders/: yelp_spider.py
