[tool.poetry]
name = "yelp-scraping-pipeline"
version = "0.1.0"
description = ""
authors = ["Joao Soares <joaoallmeida96@gmail.com>"]
readme = "README.md"
package-mode = false 

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
scrapy = "^2.11.1"
ipykernel = "^6.29.4"
scrapy-user-agents = "^0.1.1"
fsspec = "^2024.3.1"
boto3 = "^1.34.95"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
